--- a/main/resources/org/openjfx/poo/FXImportAction.fxml
+++ b/main/resources/org/openjfx/poo/FXImportAction.fxml
@@ -175,7 +175,7 @@
                                                 <Insets left="30.0" right="30.0" />
                                              </padding>
                                              <children>
-                                                <Button fx:id="btnNotify" mnemonicParsing="false" onAction="#btnNotifyAction" styleClass="btRegister" text="Enviar Notificaçõ" />
+                                                <Button fx:id="btnNotify" mnemonicParsing="false" onAction="#btnNotifyAction" styleClass="btRegister" text="Enviar Notificação" />
                                              </children>
                                           </StackPane>
                                           <StackPane maxHeight="250.0" minHeight="-Infinity" prefHeight="90.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
